unpackaged/main/default/objects/Venta__c/Venta__c.object-meta.xml
<CustomObject>
    <label>Venta</label>
    <nameField>
        <label>NombreObjeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ventas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>