unpackaged/main/default/objects/Venta__c/fields/Antiguedad__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad__c</fullName>
    <label>Antigüedad</label>
    <length>200</length>
    <type>Text</type>
</CustomField>