unpackaged/main/default/objects/Venta__c/fields/Apellido_Materno_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno_Cliente__c</fullName>
    <label>Apellido Materno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>