unpackaged/main/default/objects/Venta__c/fields/Apellido_Paterno_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno_Cliente__c</fullName>
    <label>Apellido Paterno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>