unpackaged/main/default/objects/Venta__c/fields/Approval_Object_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_Level__c</fullName>
    <label>Nivel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>