unpackaged/main/default/objects/Venta__c/fields/Approval_Object_UEN_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_UEN_Id__c</fullName>
    <label>Approval Object UEN Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>