unpackaged/main/default/objects/Venta__c/fields/Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion__c</fullName>
    <label>Bonificación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>