unpackaged/main/default/objects/Venta__c/fields/Bonificacion_Autorizada__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Autorizada__c</fullName>
    <label>Bonificación Autorizada</label>
    <length>20</length>
    <type>Text</type>
</CustomField>