unpackaged/main/default/objects/Venta__c/fields/Bonificacion_Autorizada_del_Mes_Monto__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Autorizada_del_Mes_Monto__c</fullName>
    <label>Bonificación Autorizada del Mes ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>