unpackaged/main/default/objects/Venta__c/fields/Bonificacion_Solicitada__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Solicitada__c</fullName>
    <label>Bonificación Solicitada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>