unpackaged/main/default/objects/Venta__c/fields/Bonificacion_Solicitada_Monto__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Solicitada_Monto__c</fullName>
    <label>Bonificación Solicitada ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>