unpackaged/main/default/objects/Venta__c/fields/Descuento_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Empleado__c</fullName>
    <label>Descuento Empleado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>