unpackaged/main/default/objects/Venta__c/fields/Diferencia__c.field-meta.xml
<CustomField>
    <fullName>Diferencia__c</fullName>
    <label>Diferencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>