unpackaged/main/default/objects/Venta__c/fields/Diferencia_Bonificacion_Monto__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Bonificacion_Monto__c</fullName>
    <formula>Bonificacion_Autorizada_del_Mes_Monto__c -  Bonificacion_Solicitada_Monto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>