unpackaged/main/default/objects/Venta__c/fields/Diferencia_Bonificacion_Pct__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Bonificacion_Pct__c</fullName>
    <formula>Bonificacion_Solicitada_Pct__c - Bonificacion_Autorizada_del_Mes_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>