unpackaged/main/default/objects/Venta__c/fields/Diferencia_Texto__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Texto__c</fullName>
    <label>Diferencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>