unpackaged/main/default/objects/Venta__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>