unpackaged/main/default/objects/Venta__c/fields/Financiamiento_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_Autorizado__c</fullName>
    <label>Financiamiento Autorizado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>