unpackaged/main/default/objects/Venta__c/fields/Financiamiento_PreVenta_Solicitada_Monto__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_PreVenta_Solicitada_Monto__c</fullName>
    <label>Financiamiento PreVenta Solicitada ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>