unpackaged/main/default/objects/Venta__c/fields/Financiamiento_PreVentaAutorizadaMes_Mnt__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_PreVentaAutorizadaMes_Mnt__c</fullName>
    <label>Financiamiento PreVenta Autorizada Mes $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>