unpackaged/main/default/objects/Venta__c/fields/Financiamiento_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_Solicitado__c</fullName>
    <label>Financiamiento Solicitado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>