unpackaged/main/default/objects/Venta__c/fields/Gastos_Administrativos__c.field-meta.xml
<CustomField>
    <fullName>Gastos_Administrativos__c</fullName>
    <label>Gastos Administrativos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>