unpackaged/main/default/objects/Venta__c/fields/Motivo_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Cierre__c</fullName>
    <label>Motivo de Cierre</label>
    <length>200</length>
    <type>Text</type>
</CustomField>