unpackaged/main/default/objects/Venta__c/fields/Nombre_de_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Empleado__c</fullName>
    <label>Nombre de Empleado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>