unpackaged/main/default/objects/Venta__c/fields/Nombre_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Solicitante__c</fullName>
    <label>Nombre del Solicitante</label>
    <length>100</length>
    <type>Text</type>
</CustomField>