unpackaged/main/default/objects/Venta__c/fields/Plazo_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Autorizado__c</fullName>
    <label>Plazo Autorizado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>