unpackaged/main/default/objects/Venta__c/fields/Plazo_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Solicitado__c</fullName>
    <label>Plazo Solicitado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>