unpackaged/main/default/objects/Venta__c/fields/Precio_de_Lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Lista__c</fullName>
    <label>Precio de Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>