unpackaged/main/default/objects/Venta__c/fields/Razon_de_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Razon_de_Rechazo__c</fullName>
    <label>Razón de Rechazo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>