unpackaged/main/default/objects/Venta__c/fields/Reembolso_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Reembolso_Pendiente__c</fullName>
    <label>Reembolso Pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>