unpackaged/main/default/objects/Venta__c/fields/Saldo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Cuenta__c</fullName>
    <label>Saldo Cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>