unpackaged/main/default/objects/Venta__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <label>Nombre Solicitante</label>
    <length>200</length>
    <type>Text</type>
</CustomField>