unpackaged/main/default/objects/Venta__c/fields/Tiempo__c.field-meta.xml
<CustomField>
    <fullName>Tiempo__c</fullName>
    <label>Tiempo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>