unpackaged/main/default/objects/Venta__c/recordTypes/Autorizacion_Bonificaciones_Empleados.recordType-meta.xml
<RecordType>
    <fullName>Autorizacion_Bonificaciones_Empleados</fullName>
    <active>true</active>
    <description>Autorización Bonificaciones Empleados</description>
    <label>Autorizacion Bonificaciones Empleados</label>
</RecordType>