unpackaged/main/default/objects/Venta__c/recordTypes/Autorizacion_Financiamiento_Pre_Venta.recordType-meta.xml
<RecordType>
    <fullName>Autorizacion_Financiamiento_Pre_Venta</fullName>
    <active>true</active>
    <description>Autorización Financiamiento Pre Venta</description>
    <label>Autorizacion Financiamiento Pre Venta</label>
</RecordType>