unpackaged/main/default/objects/Venta__c/recordTypes/Bonificacion_Fuera_de_Lista.recordType-meta.xml
<RecordType>
    <fullName>Bonificacion_Fuera_de_Lista</fullName>
    <active>true</active>
    <description>Bonificación Fuera de Lista</description>
    <label>Bonificacion Fuera de Lista</label>
</RecordType>