unpackaged/main/default/objects/Venta__c/recordTypes/Excepcion_Bonif_Emp_ColJaver.recordType-meta.xml
<RecordType>
    <fullName>Excepcion_Bonif_Emp_ColJaver</fullName>
    <active>true</active>
    <description>Excepcion Bonif. Emp. ColJaver</description>
    <label>Excepcion Bonif. Emp. ColJaver</label>
</RecordType>