unpackaged/main/default/objects/Venta__c/recordTypes/Excepcion_de_Paquetes_Productos_Vivienda.recordType-meta.xml
<RecordType>
    <fullName>Excepcion_de_Paquetes_Productos_Vivienda</fullName>
    <active>true</active>
    <description>Excepción de Paquetes / Productos Vivienda</description>
    <label>Excepcion de Paquetes / Productos Vivienda</label>
</RecordType>