unpackaged/main/default/objects/Venta__c/listViews/Administrador_de_Ventas_Venta.listView-meta.xml
<ListView>
    <fullName>Administrador_de_Ventas_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Administrador de Ventas</label>
    <queue>Administrador_de_Ventas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>