unpackaged/main/default/objects/Venta__c/listViews/Contador_General_Venta.listView-meta.xml
<ListView>
    <fullName>Contador_General_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Contador General</label>
    <queue>Contador_General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>