unpackaged/main/default/objects/Venta__c/listViews/Direcci_n_Jur_dica_Venta.listView-meta.xml
<ListView>
    <fullName>Direcci_n_Jur_dica_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Dirección Jurídica</label>
    <queue>Direcci_n_Jur_dica</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>