unpackaged/main/default/objects/Venta__c/listViews/Director_de_Operaciones_Venta.listView-meta.xml
<ListView>
    <fullName>Director_de_Operaciones_Venta</fullName>
    <filterScope>Queue</filterScope>
    <label>Director de Operaciones</label>
    <queue>Director_de_Operaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>